Closed Bug 470431 Opened 16 years ago Closed 16 years ago

Memory leak of document and content nodes with creating DOMMouseScroll event

Categories

(Core :: DOM: Events, defect, P2)

x86
Windows XP
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: martijn.martijn, Assigned: smaug)

Details

(Keywords: fixed1.9.1, memory-leak, testcase)

Attachments

(2 files)

Attached file testcase
See testcase, which leaks a document and content nodes according to the nspr log:
Results of processing log leak1.log :
Leaked document at address 3b72000.
 ... with URI "jar:file:///C:/Documents%20and%20Settings/mw/Bureaublad/moz/firefox20081218/chrome/toolkit.jar!/content/global/bindings/scrollbar.xml".
 ... with URI "chrome://global/content/bindings/scrollbar.xml".
Leaked content nodes associated with node info manager at address 2c09cd0.
 ... with document URI "file:///C:/Documents%20and%20Settings/mw/Bureaublad/crashzone/ajaxdemolisher_files/mlk_dommousescroll.htm".
Leaked content nodes associated with node info manager at address 2c95e80.
 ... with document URI "jar:file:///C:/Documents%20and%20Settings/mw/Bureaublad/moz/firefox20081218/chrome/toolkit.jar!/content/global/bindings/scrollbar.xml".
 ... with document URI "chrome://global/content/bindings/scrollbar.xml".

Summary:
Leaked 0 out of 0 DOM Windows
Leaked 1 out of 51 documents
Leaked 0 out of 7 docshells
Leaked content nodes in 2 out of 63 documents
Assignee: nobody → Olli.Pettay
Attached patch proposed patchSplinter Review
Unfortunately nsDOMMouseScrollEvent needs to do the same thing what nsDOMMouseEvent ctor does.
Attachment #353838 - Flags: superreview?(jst)
Attachment #353838 - Flags: review?(jst)
Attachment #353838 - Flags: superreview?(jst)
Attachment #353838 - Flags: superreview+
Attachment #353838 - Flags: review?(jst)
Attachment #353838 - Flags: review+
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Comment on attachment 353838 [details] [diff] [review]
proposed patch

this is new code in 1.9.1 and should be fixed, IMO, before ff3.1
Attachment #353838 - Flags: approval1.9.1?
Flags: in-testsuite?
Flags: blocking1.9.1?
Verified fixed, using:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a1pre) Gecko/20081220 Minefield/3.2a1pre
Status: RESOLVED → VERIFIED
Comment on attachment 353838 [details] [diff] [review]
proposed patch

a191=beltzner
Attachment #353838 - Flags: approval1.9.1? → approval1.9.1+
Keywords: fixed1.9.1
Flags: blocking1.9.1? → blocking1.9.1+
Priority: -- → P2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: