 Bug 470431 -  Memory leak of document and content nodes with creating DOMMouseScroll event, r+sr=jst