content/events/src/nsDOMMouseScrollEvent.cpp
@@ -46,6 +46,14 @@ nsDOMMouseScrollEvent::nsDOMMouseScrollEvent(nsPresContext* aPresContext,
   : nsDOMMouseEvent(aPresContext, aEvent ? aEvent :
                                   new nsMouseScrollEvent(PR_FALSE, 0, nsnull))
 {
+  if (aEvent) {
+    mEventIsInternal = PR_FALSE;
+  } else {
+    mEventIsInternal = PR_TRUE;
+    mEvent->time = PR_Now();
+    mEvent->refPoint.x = mEvent->refPoint.y = 0;
+  }
+
   if(mEvent->eventStructType == NS_MOUSE_SCROLL_EVENT) {
     nsMouseScrollEvent* mouseEvent = static_cast<nsMouseScrollEvent*>(mEvent);
     mDetail = mouseEvent->delta;
